<resources>
    <string name="app_name">Severe Weather Alerts</string>
    <string name="title_placeholder">Event Title</string>
    <string name="instruction_label">Recommended Actions</string>
    <string name="small_headline_placeholder">SMALL HEADLINE</string>
    <string name="description_placeholder">Description</string>
    <string name="large_headline_placeholder">Large Headline</string>
    <string name="instruction_placeholder">Instruction</string>
    <string name="future_time_placeholder">Future Time</string>
    <string name="cancel_time_placeholder">Cancel Time</string>
    <string name="past_time_placeholder">Past Time</string>
    <string name="alert_not_found_error_message">Sorry, this alert was not found</string>
    <string name="reference_placeholder">Reference</string>
    <string name="references_label">History</string>
    <string name="sender_placeholder">National Weather Service</string>
    <string name="next_update_placeholder">Next Update</string>
    <string name="server_error">There was a server error while getting alert data</string>
    <string name="unknown_alert_error">An unknown error occurred while getting alert data: </string>
    <string name="graphic_title_placeholder">Graphic Title</string>
    <string name="graphic_subtext_placeholder">Graphic Subtext</string>
    <string name="graphic_content_description">graphic</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="location_fetch_text">Getting Location</string>
    <string name="recent_alerts">Recent Alerts</string>
    <string name="active_alerts">Active Alerts</string>
    <string name="location_name">Give this location a name</string>
    <string name="location_text_entry">Enter address, town, zipcode, or coordinate</string>
    <string name="location_search">Search</string>
    <string name="use_location_button">Use This Location</string>
    <string name="location_cancel_button">Cancel</string>
    <string name="clear_button_text">Clear</string>
    <string name="use_current_location_button">Use Current Location</string>
    <string name="this_device_s_location">Device Location</string>
    <string name="custom_set_location">Fixed Location</string>
    <string name="where_should_alerts_be_for">Where should alerts be for?</string>
    <string name="welcome">Welcome!</string>
    <string name="location_disclaimer">This app will collect your device\'s approximate location to send alert notifications, even when the app is closed.</string>
    <string name="disclaimer_title">Background Location Access</string>
    <string name="privacy_policy_link">https://github.com/qconrad/severe-weather-alerts/blob/main/privacy.md</string>
    <string name="background_deny_title">Are you sure?</string>
    <string name="background_deny_message">You choose to not allow background location usage. Alerts will still work but will use the location from the last time the app was opened.</string>
    <string name="location_deny_title">Location Permission Needed</string>
    <string name="location_deny_message">Without this permission, alerts can not be sent for this location. Are you sure you want to deny this permission? You can alternatively enter a fixed location.</string>
    <string name="default_channel_behavior">Default Channel Behavior</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="ripple_edit">Ripple Edit</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_channel_disclaimer">It looks like you\'re using an older version of Android which doesn\'t support notification channels. This means that while alerts will still work, they will all use your default notification sound and appear in the same way, regardless of their severity (low, medium, high, or extreme). However, you can still disable the notification using the \'none\' channel. We recommend upgrading to a newer version of Android to take advantage of notification channels and have more control over your alert notifications."</string>
    <string name="channels_not_supported">Notification Channels Not Supported</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="new_data_available">New data is available</string>
    <string name="location_change">Device location has changed since last update</string>
    <string name="icons_creators">Icons are provided by graphic designers from The Noun Project.\n\nCloud Error by Graphic Tigers\nHazard by Mike Rowe\nCold by Xela Ub\nLightning Bolt by richard pasqua\nTornado by Laymik\nfog by iconoci\nFire by Aisyah\nwave by Andrew Lynne\nblizzard by tezar tantular\nCold by Baboon designs\nIcicle by Fauzan Adiima\nair quality by emma mitchell\nfreeze by Marta Ambrosetti\nHurricane by Aldric Rodríguez\nHurricane by Rien Mokel\nFlag by Maxim Kulikov\nWind by Ema Dimitrova\nBoat by Marksu Loritas\nGale warning by icon 54\nHot by Alexis Boudal\nMissing by Hay Kam\nPhone by zidney\nVolcano by Patrick Morrison\nAvalanche by Georgiana Ionescu\nEarthquake by Hai Studio\nTsunami by Adrien Coquet\nPolice by Nociconist\nLocation by Vectorstall\nsun by Vectorstall\nError by Comeheresailartis.t\ntesting by Yoyo</string>
    <string name="feedback_textbox_placeholder">Enter your feedback here</string>
    <string name="feedback_subtext">Thank you for sharing your thoughts. Your feedback is always appreciated and helps improve the app. Please note that it is not possible to directly reply to individual feedback submissions.</string>
    <string name="feedback_title">What do you think?</string>
    <string name="send_feedback_button_text">Send your feedback</string>
    <string name="location_delete_confirmation">Are you sure you want to permanently delete this location and all its preferences? This cannot be undone.</string>
    <string name="location_delete_confirmation_title">Delete Confirmation</string>
    <string name="no_locations_geocode_error">Sorry, there aren\'t any results for your search. This could be because the search term is too broad or there are no matching addresses. Please try using a more specific search term or double-checking your spelling and city/ZIP code.</string>
    <string name="location_icon">location icon</string>
    <string name="edit_activity_location_name">Location Name</string>
</resources>