<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gfx_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#fff"
        android:layout_marginBottom="5dp"
        android:text="@string/graphic_title_placeholder"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/gfx_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/graphic_content_description"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/gfx_subtext"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ccc"
        android:visibility="gone"
        android:text="@string/graphic_subtext_placeholder"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />

</LinearLayout>
